--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "jsPlumb",
-  "version": "2.0.5",
+  "name": "jsPlumb-webjar",
+  "version": "2.0.5.1",
   "ignore": [
     "demo",
     "dist/apidocs",
